# PrivEnergyBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: 20min_面试汇报_詹绍基.pptx  20min_面试汇报_詹绍基_20页图表版.pptx  build_interview_ppt_20slides.py  build_interview_ppt_sunren_ra.py  build_interview_ppt_sunren_ra_8plus2.py  generate_clean_interview_figures.py  interview_qa_zh.md  interview_storyline_zh.md  ppt_20min_content_rebuild_zh.md  project_showcase.html  redraw_interview_figures.py  resume_pack_zh.md  tech_onepager_zh.md  下午面试_孙仁组_RA_8页正文2备用.pptx  詹绍基_个人简历.tex  詹绍基_个人简历_1页投递版.md  詹绍基_个人简历_科研助理定制版.md  詹绍基_个人简历_通用导师版.tex
src/privenergybench/: __main__.py  cli.py  config.py  data.py  energy.py  models.py  privacy.py  reporting.py  train.py
tests/: test_smoke.py
